resources/host-app/svc-and-deploy-host-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-api-host
spec:
  selector:
    app: env-api-host
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-api-host
spec:
  selector:
    matchLabels:
      app: env-api-host
  replicas: 1
  template:
    metadata:
      labels:
        app: env-api-host
    spec:
      containers:
      - name: env-api-host
        image: ydguala/env-api:latest
        args: ["POD_NAME", "POD_NAMESPACE", "POD_NODE_NAME","APP_NAME"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
