resources/host-app/route-host-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: env-api-host
spec:
  host: impact.apps.neo.example.es
  to:
    kind: Service
    name: env-api-host
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
